--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   avatar           : # "profile.png"
   name             : "Junxi Liu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Chengdu,Chine"
+  bio              : "a undergraduate student from UESTC"
+  location         : "Chengdu,China"
   employer         : "UESTC"
   uri              : # URL
   email            : "none@example.org" 
@@ -52,7 +52,7 @@ author:
 
   # Social media
   artstation       : # Username
-  bluesky          : # "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" 
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
