--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : # "profile.png"
+  avatar           : "IMG_20250726_020852.jpg"
   name             : "Junxi Liu"
   pronouns         : # example: "she/her"  
   bio              : "a undergraduate student from UESTC"
   location         : "Chengdu,China"
   employer         : "UESTC"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "liujunxi97@gmail.com" 
 
   # Academic websites
   academia         : # URL
@@ -46,7 +46,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : # "academicpages"
+  github           : "https://github.com/junxi25liu"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
